<resources>
    <string name="app_name">CSE5236 Project</string>
    <string name="log_in_title">Log In</string>
    <string name="new_account_title">New Account</string>
    <string name="account_settings_title">Account Settings</string>
    <string name="main_menu_title">Main Menu</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="confirm_password_hint">confirm password</string>
    <string name="current_password_hint">current password</string>
    <string name="new_password_hint">new password</string>
    <string name="log_in_button">LOG IN</string>
    <string name="new_account_button">NEW ACCOUNT</string>
    <string name="create_button">CREATE</string>
    <string name="update_password_button">UPDATE PASSWORD</string>
    <string name="delete_account_button">DELETE ACCOUNT</string>
    <string name="join_create_button">JOIN / CREATE ROOM</string>
    <string name="account_settings_button">ACCOUNT SETTINGS</string>
    <string name="log_out_button">LOG OUT</string>
    <string name="cancel_button">CANCEL</string>
    <string name="exit_button">EXIT</string>
    <string name="no_username_password_toast">Must provide a username and password!</string>
    <string name="username_not_found_toast">Username not found!</string>
    <string name="incorrect_password_toast">Password is incorrect!</string>
    <string name="successful_log_in_toast">Successful log in!</string>
    <string name="account_created_toast">Account successfully created!</string>
    <string name="log_in_error_toast">Error logging in!</string>
    <string name="new_account_error_toast">Error creating new account!</string>
    <string name="username_taken_toast">Username has already been taken!</string>
    <string name="passwords_no_match_toast">Provided passwords do not match!</string>
    <string name="password_changed_toast">Password has been changed!</string>
    <string name="password_change_error_toast">Error changing password!</string>
    <string name="no_current_new_password_toast">Must provide the current and new passwords!</string>
    <string name="account_deleted_toast">Account deleted!</string>
    <string name="account_delete_error_toast">Error deleting account!</string>
    <string name="no_current_password_toast">Must provide current password!</string>
    <string name="Select_your_chat_room">Select your chat room</string>
    <string name="Start_new_chat_room">Start new chat room</string>
    <string name="Name_new_chat_room">Name of the new chat room</string>
    <string name="Member_to_invite">Name of the new member</string>
    <string name="Invite">Invite</string>
    <string name="New_message">Message</string>
    <string name="Send">Send</string>
    <string name="Current_chat">Current chat</string>
    <string name="vibrator_not_found">Phone Vibrator Not Working Properly!</string>
    <string name="message_not_int">Message received CANNOT be casted to Integer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>